39. Custom appClass directive

--- a/CustomDirectives/src/app/app.component.html
+++ b/CustomDirectives/src/app/app.component.html
@@ -22,4 +22,11 @@
   <p>This is a demo HTML content to undestand @HostBinding in Angular.</p>
 </div>
 
+<div [appClass]="{ container: 10 > 5, 'change-font': true }">
+  <p>
+    This is a demo HTML content to undestand custom attribute directive in
+    Angular.
+  </p>
+</div>
+
 <!--setBackground-->
