41. Custom appStyle Directive

--- a/CustomDirectives/src/app/app.component.html
+++ b/CustomDirectives/src/app/app.component.html
@@ -29,4 +29,18 @@
   </p>
 </div>
 
+<div
+  class="container"
+  [appStyle]="{
+    backgroundColor: active ? 'Green' : 'Red',
+    color: 'white',
+    fontWeight: 'bold'
+  }"
+>
+  <p>
+    This is a demo HTML content to undestand custom ngStyle directive directive
+    in Angular.
+  </p>
+</div>
+
 <!--setBackground-->
