--- a/CustomDirectives/src/app/app.component.html
+++ b/CustomDirectives/src/app/app.component.html
@@ -38,9 +38,30 @@
   }"
 >
   <p>
-    This is a demo HTML content to undestand custom ngStyle directive directive
+    This is a demo HTML content to understand custom ngStyle directive directive
     in Angular.
   </p>
 </div>
+
+<button class="btn btn-notice" (click)="DisplayNotice()">Show notice</button>
+<!-- <div class="info-container notice" *ngIf="display; else myVar">
+  <h3>This is important notice!</h3>
+  <p>This is a notice issued for all website users</p>
+</div>
+
+<ng-template #myVar>
+  <p>This is an example paragraph.</p>
+</ng-template> -->
+
+<ng-template [ngIf]="display" [ngIfElse]="myVar">
+  <div class="info-container notice">
+    <h3>This is important notice!</h3>
+    <p>This is a notice issued for all website users</p>
+  </div>
+</ng-template>
+
+<ng-template #myVar>
+  <p>This is an example paragraph.</p>
+</ng-template>
 
 <!--setBackground-->
